# netloadgraph

./: Makefile.am  PKGBUILD  README.md  configure.ac  index.html  netloadgraph.desktop  params.json
debian/: changelog  control  copyright
icons/: Makefile.am
src/: Makefile.am  appmenu.ui  main.c  net.sourceforge.netloadgraph.gschema.xml  netloadgraph.gresource.xml  netloadgraphapp.c  netloadgraphapp.h  netloadgraphwin.c  netloadgraphwin.h  netloadgraphwin.ui  netloadgraphwinprefs.c  netloadgraphwinprefs.h  netloadgraphwinprefs.ui  netloadstats.c  netloadstats.h  org.rafaello7.netloadgraph.gschema.xml  resources.c
